<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">

    <string name="app_name">Z-STAR</string>
    <string name="empty">empty</string>
    <string name="version_name">当前版本号：</string>
    <string name="can_not_find_version_name">未知</string>

    <!-- welcome -->
    <string name="machine_washing">咖啡机清洗中，请稍候使用</string>
    <string name="welcome_get_machine_config">正在获取咖啡机配置</string>
    <string name="welcome_set_temperature">正在设置锅炉温度</string>
    <string name="welcome_set_temperature_fail">设置咖啡机锅炉温度失败</string>
    <string name="welcome_set_temperature_timeout">设置咖啡机锅炉温度超时</string>
    <string name="welcome_set_temperature_success">设置咖啡机锅炉温度成功</string>
    <string name="welcome_start_wash_machine">正在清洗咖啡机</string>
    <string name="welcome_wash_machine_fail">咖啡机清洗失败</string>
    <string name="welcome_wash_machine_success">咖啡机清洗成功</string>
    <string name="welcome_get_dosing_list_fail">获取原料列表失败</string>
    <string name="welcome_get_dosing_list_success">获取原料列表成功</string>
    <string name="welcome_sync_stock_success">库存同步成功</string>
    <string name="welcome_sync_stock_fail">库存同步失败</string>
    <string name="welcome_enter_control_panel_tip">再按一次进入咖啡机后台</string>

    <!-- network change -->
    <string name="network_connecting">连接中&#8230;</string>
    <string name="network_connect_failed">未连接</string>
    <string name="network_no_connect">无网络</string>
    <string name="network_server_is_not_available">连接服务器失败，稍后将重试连接</string>
    <string name="network_is_not_available">网络连接失败，请检查你的网络设置</string>
    <string name="network_forbidden_login">您被服务器禁止登录，详询客服</string>
    <string name="network_need_verify_again">在其他咖啡机上使用了相同的ID，请确认</string>
    <string name="network_failed_unavailable">网络连接失败，请稍候重试</string>
    <string name="network_kick_title">身份失效</string>
    <string name="network_kick_i_know">知道了</string>

    <!-- sdcard -->
    <string name="sdcard_not_enough">存储空间已不足，无法保存此次多媒体消息</string>
    <string name="sdcard_not_enough_warning">剩余存储空间很少，建议清理存储卡</string>
    <string name="sdcard_deny">请插入SD卡</string>

    <!-- login -->
    <string name="login_account_is_null">请输入帐号</string>
    <string name="login_password_is_null">请输入密码</string>
    <string name="login_add_dosing_init">填料初始化</string>
    <string name="login_coffee_machine_title">咖啡机启动</string>
    <string name="login_coffee_machine_start">启动</string>
    <string name="login_coffee_info_label">咖啡机信息</string>
    <string name="login_coffee_machine_id">咖啡机ID：</string>
    <string name="login_coffee_machine_pwd">认证密码：</string>
    <string name="login_add_dosing_by_ml">单位ml</string>
    <string name="login_add_dosing_by_g">单位g</string>
    <string name="login_add_dosing_by_num">单位个</string>
    <string name="login_init_dosing">初始化填料信息</string>

    <!-- be kicked -->
    <string name="ad_kicked_title">离线提示</string>
    <string name="ad_kicked_btn_ok">重新登录</string>
    <string name="ad_kicked_btn_cancel">取消</string>
    <string name="relogin_kicked_title">重登提示</string>
    <string name="relogin_kicked_message">服务器连接失败，请重新登录。</string>
    <string name="relogin_kicked_btn_ok">确定</string>
    <string name="relogin_kicked_btn_cancel">取消</string>
    
    <!-- splash -->
	<string name="setTemp">正在设置咖啡机</string>

    <!-- home -->
    <string name="home_coffee_machine_no">咖啡机编号：%s&#12288;</string>
    <string name="home_discount_reduction">全场%1$s折后满%2$s减%3$s</string>
    <string name="home_discount_only">全场%s折</string>
    <string name="home_reduction_only">满%1$s减%2$s</string>

    <!-- fetch && exchange -->
    <string name="fetch_coffee_input_code_tip">输入取货码取货</string>
    <string name="fetch_coffee_qrcode_tip">APP扫码取货</string>
    <string name="fetch_input_edit_hint">输入取货码</string>
    <string name="fetch_is_requesting">正在取货，请勿重复提交请求</string>
    <string name="verify_code_is_null">取货码不能为空</string>

    <!-- exchange -->
    <string name="exchange_input_edit_hint">输入兑换码</string>

    <!-- pay -->
    <string name="add_sugar_tip">加糖</string>
    <string name="pay_add_no_sugar">无糖</string>
    <string name="pay_add_little_sugar">少糖</string>
    <string name="pay_add_middle_sugar">中糖</string>
    <string name="pay_add_more_sugar">多糖</string>
    <string name="pay_scan_this_qrcode">请扫描此二维码</string>
    <string name="pay_ali_qrcode_tips">支付宝扫码付款流程</string>
    <string name="pay_ali_wave_tips">支付宝声波付款流程</string>
    <string name="pay_weixin_qrcode_tips">微信扫码付款流程</string>
    <string name="pay_timer_tip">%d秒</string>
    <string name="pay_generate_qrcode">正在生成二维码</string>
    <string name="pay_waiting_scan">请扫描下方二维码完成支付</string>
    <string name="pay_pay_success">支付成功</string>
    <string name="pay_choose_payment">选择支付方式</string>
    <string name="pay_by_sonicwave_tip">请用支付宝当面付付款</string>
    <string name="pay_qrcode_price">%s元</string>
    <string name="pay_coffee_price_format">¥%s</string>
    <string name="pay_cart_total_price_format">共计%s元</string>
    <string name="pay_cart_title_cart">购物车</string>
    <string name="pay_cart_title_pay">支付</string>
    <string name="pay_cart_no_drinks_to_pay">购物车没有可供支付的饮料</string>
    <string name="pay_cart_stock_insufficient">物料不足，不能继续添加咖啡</string>
    <string name="pay_favour_tip">总额¥%1$.2f - 折扣¥%2$.2f - 满减¥%3$.2f  </string>
    <string name="pay_favour_tip_discount">总额¥%1$.2f - 折扣¥%2$.2f</string>
    <string name="pay_favour_tip_meetsub">总额¥%1$.2f - 满减¥%2$.2f</string>
    <string name="pay_actual_pay">实付¥%.2f</string>
    <string name="pay_qrcode_detail_tip">共优惠¥%1$.2f, 只需支付¥%2$.2f</string>
    <string name="pay_qrcode_detail_tip_no_favour">只需支付¥%.2f</string>

    <!-- cart -->
    <string name="cart_exceeds_max_num">一次最多可购买9杯</string>
    <string name="cart_total_price">总计:¥%.2f</string>
    <string name="cart_favour_discount">折扣优惠:¥%.2f</string>
    <string name="cart_favour_meetsub">满减优惠:¥%.2f</string>
    <string name="cart_actual_pay">实付:¥%.2f</string>
    <string name="cart_total_num">共%d杯</string>

    <!-- make coffee -->
    <string name="make_coffee_prepare">饮料正准备制作，请耐心等候</string>
	<string name="make_coffee_failed">饮料制作失败,24小时内退款回原处</string>
    <string name="make_coffee_retry">您的饮料尚未取走，请取走杯子后重试</string>
    <string name="make_coffee_successful_and_continue">%s已经制作完成，请取货。\n取货后将自动制作下一杯饮料</string>
    <string name="make_coffee_successful_all">饮料全部制作成功，请享用。</string>
    <string name="make_coffee_cart_status">%1$s正在制作中\n还剩%2$d杯饮料正在排队制作</string>
    <string name="make_coffee_status">%1$s正在制作中，请耐心等候</string>
    <string name="make_coffee_user_cancel">饮料制作已取消，未制作饮料将在24小时内退款</string>
    <string name="make_coffee_cancel">确定要取消剩余订单？</string>

    <!-- error code -->
    <string name="exchange_error_no_coffeeindent">无咖啡订单或者无此咖啡机</string>
    <string name="exchange_error_have_fetch">咖啡被取过</string>
    <string name="exchange_error_system">系统错误</string>
    <string name="exchange_error_no_pay">订单未付款</string>
    <string name="exchange_error_drawback">订单已退款</string>
    <string name="exchange_error_dosing_not_enough">配料不足</string>
    <string name="exchange_error_default">未知错误</string>
    <string name="exchange_error_have_fetch_by_other_mac">咖啡被其他咖啡机取过</string>
    <string name="pay_error_waiting_pay">等待支付</string>
    <string name="pay_error_cancel_indent">交易被关闭</string>
    <string name="pay_error_timeout">请求二维码超时，请重试</string>

    <!-- serial port -->
    <string name="error_configuration">请先配置串口参数</string>
    <string name="error_security">没有串口读写权限</string>
    <string name="error_unknown">串口无法打开</string>
    
    <!-- control -->
    <string name="control_set_dosing_is_null">有一个或多个料盒未设置</string>
    <string name="control_add_dosing">配料设置</string>
    <string name="control_test_machine">机器调试</string>
    <string name="control_other">其它</string>
    <string name="control_update_dosing">更新物料库存</string>
    <string name="control_reset_dosing">重置物料库存</string>
    <string name="control_fix_error_sure">确认修复问题了吗?</string>
    <string name="control_doing_list_is_null">原料列表为空</string>

    <!-- help -->
    <string name="help_come_soon">敬请期待</string>
    <string name="help_instruction_step1">1.&#12288;点击屏幕进入购买界面</string>
    <string name="help_instruction_step2">2.&#12288;选择饮品</string>
    <string name="help_instruction_step3">3.&#12288;选择支付方式</string>
    <string name="help_instruction_step4">4.&#12288;支付完成等待取货</string>
    <string name="help_instruction_step5">5.&#12288;制作完成取走饮品</string>
    <string name="help_instruction_buy">使用说明</string>
    <string name="help_instruction_kefu">联系我们</string>
    <string name="help_instruction_kefu_phone">客服热线：0571-86681790</string>
    <string name="help_instruction_kefu_time">客服时间：周一至周日 09:30--21:30</string>
    <string name="help_instruction_kefu_tip">如果您对Z-STAR的产品及服务有任何疑问或建议，欢迎您来电</string>
    <string name="EspressoCoffee">意式浓缩咖啡</string>
    <string name="CafeAmericano">美式咖啡</string>

</resources>