<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="@drawable/home_background">
    
    <include layout="@layout/home_title_layout" />
    
	<LinearLayout
	    android:id="@+id/pay_content_area"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
		android:background="@color/transparent" 
		android:orientation="vertical">
		
	    <RelativeLayout 
		    android:layout_width="fill_parent"
		    android:layout_height="@dimen/home_indicator_bar_height"
			android:orientation="horizontal">
			
		    <ImageView 
		        android:id="@+id/pay_qrcode_back_btn"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_centerVertical="true"
		        android:src="@drawable/pay_back_selector"
		        android:layout_marginLeft="15dp"
		        android:contentDescription="@string/empty"/>	
		        
		    <TextView 
			    android:id="@+id/pay_qrcode_timer" 
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:textSize="@dimen/pay_coffee_timer_font_size"
			    android:textColor="#7d5a40"
			    android:layout_toRightOf="@id/pay_qrcode_back_btn"
			    android:layout_marginLeft="10dp"
			    android:layout_centerVertical="true"/>
	
		</RelativeLayout>
		
		<LinearLayout 
		    android:id="@+id/pay_coffee_qrcode_tips_area"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical"
		    android:layout_marginTop="4dp"
		    android:layout_marginBottom="4dp">
		    
		    <TextView
		        android:id="@+id/pay_coffee_method_tip"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:textSize="@dimen/pay_coffee_timer_font_size" 
			    android:text="@string/pay_ali_qrcode_tips"
			    android:textColor="#4f3f35"
			    android:layout_gravity="center_horizontal"
			    android:layout_marginBottom="10dp"/>
		    
		    <ImageView 
		        android:id="@+id/pay_coffee_operation_tip"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:src="@drawable/pay_ali_qrcode_instruction"
			    android:contentDescription="@string/empty"
			    android:scaleType="fitCenter"
			    android:layout_gravity="center_horizontal"
			    android:layout_margin="10dp"/>
		    			    
		</LinearLayout>

		<LinearLayout
			android:id="@+id/pay_coffee_detail_linear"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:minWidth="200dp"
			android:layout_marginTop="60dp"
			android:background="@drawable/pay_detail_bg"
			android:layout_gravity="center_horizontal"
			android:gravity="center"
			android:visibility="invisible">

			<TextView
				android:id="@+id/pay_coffee_detail"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textSize="35dp"
				android:textColor="#ffffff"
				android:layout_gravity="center" />

		</LinearLayout>

		<TextView
	        android:id="@+id/pay_coffee_process_tip"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="20dp"
		    android:textSize="@dimen/pay_coffee_timer_font_size"
		    android:textColor="#4f3f35"
		    android:layout_gravity="center_horizontal"
		    android:text="@string/pay_generate_qrcode"/>
		
		<ImageView 
	        android:id="@+id/pay_coffee_qrcode"
	        android:layout_marginTop="@dimen/pay_qrcode_margin_top"
		    android:layout_width="@dimen/pay_qrcode_size"
		    android:layout_height="@dimen/pay_qrcode_size"
		    android:contentDescription="@string/empty"
		    android:layout_gravity="center_horizontal"/>
	
	</LinearLayout>
	
</LinearLayout>