<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="料盒库存设置"
            android:textSize="@dimen/login_font_size"
            android:textColor="#000000"
            android:layout_marginLeft="10dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000"
            android:layout_marginTop="8dp"/>

    </LinearLayout>

    <LinearLayout 
        android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">
        
        <LinearLayout 
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
			android:layout_margin="@dimen/management_setting_item_margin"     
			android:background="#505050"
			android:layout_weight="1.0"
			android:gravity="center_vertical">
			
			<TextView 
			    android:text="一号料盒："
				android:textStyle="bold"
				android:gravity="center"
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:textSize="@dimen/management_text_font_size"/>
		 			
		 	<EditText
		 	    android:id="@+id/set_dosing_no1"
		 	    android:layout_width="fill_parent"
		 	    android:layout_height="@dimen/management_edit_text_h"
		 	    android:layout_marginLeft="@dimen/management_edit_margin_left"
		 	    android:background="#603a11"
		 	    android:gravity="left|center_vertical" 
		 	    android:inputType="number"
		 	    android:textSize="@dimen/login_font_size"
		 	    android:paddingLeft="10dp"
		 	    android:hint="@string/login_add_dosing_by_g"
                android:textColorHint="@color/grey"/>
	
		</LinearLayout>
		
        <LinearLayout 
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
			android:layout_margin="@dimen/management_setting_item_margin" 
			android:background="#505050"
			android:layout_weight="1.0"
			android:gravity="center_vertical">
			
			<TextView 
			    android:text="二号料盒："
				android:textStyle="bold"
				android:gravity="center"
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:textSize="@dimen/management_text_font_size"/>
		 			
		 	<EditText
		 	    android:id="@+id/set_dosing_no2"
		 	    android:layout_width="fill_parent"
		 	    android:layout_height="@dimen/management_edit_text_h"
		 	    android:layout_marginLeft="@dimen/management_edit_margin_left"
		 	    android:background="#603a11"
		 	    android:gravity="left|center_vertical" 
		 	    android:textSize="@dimen/login_font_size"
		 	    android:inputType="number"
		 	    android:paddingLeft="10dp"
		 	    android:hint="@string/login_add_dosing_by_g"
                android:textColorHint="@color/grey"/>
	
		</LinearLayout>

    </LinearLayout>
    
	<LinearLayout 
        android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">
        
        <LinearLayout 
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
			android:layout_margin="@dimen/management_setting_item_margin"     
			android:background="#505050"
			android:layout_weight="1.0"
			android:gravity="center_vertical">
			
			<TextView 
			    android:text="三号料盒："
				android:textStyle="bold"
				android:gravity="center"
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:textSize="@dimen/management_text_font_size"/>
		 			
		 	<EditText
		 	    android:id="@+id/set_dosing_no3"
		 	    android:layout_width="fill_parent"
		 	    android:layout_height="@dimen/management_edit_text_h"
		 	    android:layout_marginLeft="@dimen/management_edit_margin_left"
		 	    android:background="#603a11"
		 	    android:gravity="left|center_vertical" 
		 	    android:textSize="@dimen/login_font_size"
		 	    android:inputType="number"
		 	    android:paddingLeft="10dp"
		 	    android:hint="@string/login_add_dosing_by_g"
                android:textColorHint="@color/grey"/>
	
		</LinearLayout>
		
        <LinearLayout 
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
			android:layout_margin="@dimen/management_setting_item_margin" 
			android:background="#505050"
			android:layout_weight="1.0"
			android:gravity="center_vertical">
			
			<TextView 
			    android:text="四号料盒："
				android:textStyle="bold"
				android:gravity="center"
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:textSize="@dimen/management_text_font_size"/>
		 			
		 	<EditText
		 	    android:id="@+id/set_dosing_no4"
		 	    android:layout_width="fill_parent"
		 	    android:layout_height="@dimen/management_edit_text_h"
		 	    android:layout_marginLeft="@dimen/management_edit_margin_left"
		 	    android:background="#603a11"
		 	    android:gravity="left|center_vertical" 
		 	    android:textSize="@dimen/login_font_size"
		 	    android:inputType="number"
		 	    android:paddingLeft="10dp"
		 	    android:hint="@string/login_add_dosing_by_g"
                android:textColorHint="@color/grey"/>
	
		</LinearLayout>

    </LinearLayout>
	
	<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/management_setting_item_margin"
            android:background="#505050"
            android:layout_weight="1.0"
            android:gravity="center_vertical">

            <TextView
                android:text="九号料盒："
                android:textStyle="bold"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textSize="@dimen/management_text_font_size"/>

            <EditText
                android:id="@+id/set_dosing_no9"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/management_edit_text_h"
                android:layout_marginLeft="@dimen/management_edit_margin_left"
                android:background="#603a11"
                android:gravity="left|center_vertical"
                android:textSize="@dimen/login_font_size"
                android:inputType="number"
                android:paddingLeft="10dp"
                android:hint="@string/login_add_dosing_by_g"
                android:textColorHint="@color/grey"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/management_setting_item_margin"
            android:background="#505050"
            android:layout_weight="1.0"
            android:gravity="center_vertical"
            android:visibility="invisible">

            <TextView
                android:text="缺省料盒："
                android:textStyle="bold"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textSize="@dimen/management_text_font_size"/>

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="@dimen/management_edit_text_h"
                android:layout_marginLeft="@dimen/management_edit_margin_left"
                android:background="#603a11"
                android:gravity="left|center_vertical"
                android:textSize="@dimen/login_font_size"
                android:inputType="number"
                android:paddingLeft="10dp"
                android:hint="@string/login_add_dosing_by_g"
                android:textColorHint="@color/grey"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="非料盒库存设置"
            android:textSize="@dimen/login_font_size"
            android:textColor="#000000"
            android:layout_marginLeft="10dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000"
            android:layout_marginTop="8dp"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/management_setting_item_margin"
            android:background="#505050"
            android:layout_weight="1.0"
            android:gravity="center_vertical">

            <TextView
                android:text="杯子存量："
                android:textStyle="bold"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textSize="@dimen/management_text_font_size"/>

            <EditText
                android:id="@+id/set_dosing_cup"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/management_edit_text_h"
                android:layout_marginLeft="@dimen/management_edit_margin_left"
                android:background="#603a11"
                android:gravity="left|center_vertical"
                android:textSize="@dimen/login_font_size"
                android:inputType="number"
                android:paddingLeft="10dp"
                android:hint="@string/login_add_dosing_by_num"
                android:textColorHint="@color/grey"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/management_setting_item_margin"
            android:background="#505050"
            android:layout_weight="1.0"
            android:gravity="center_vertical">

            <TextView
                android:text="水存储量："
                android:textStyle="bold"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textSize="@dimen/management_text_font_size"/>

            <EditText
                android:id="@+id/set_dosing_water"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/management_edit_text_h"
                android:layout_marginLeft="@dimen/management_edit_margin_left"
                android:background="#603a11"
                android:gravity="left|center_vertical"
                android:textSize="@dimen/login_font_size"
                android:inputType="number"
                android:paddingLeft="10dp"
                android:hint="@string/login_add_dosing_by_ml"
                android:textColorHint="@color/grey"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
